plugins {
	id 'java'
	id "fabric-loom"
	id 'ploceus'
}

group = maven_group
version = "${project.version}+${project.minecraft_18}"
archivesBaseName = "AxolotlClient-config"

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

repositories {
	maven {
		url = "https://moehreag.duckdns.org/maven/releases"
	}
	mavenLocal()
	mavenCentral()
}

loom {
	mods {
		"axolotlclientconfig" {
			sourceSet("main")
		}
		"axolotlclientconfig-test" {
			sourceSet("test")
		}
	}
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_18}"
	mappings "net.ornithemc:feather:${project.mappings_18}"

	modImplementation "net.fabricmc:fabric-loader:${project.fabric_loader}"

	ploceus.dependOsl(osl)

	modImplementation("com.terraformersmc:modmenu:0.1.1+mc1.8.9")

	implementation include(project(":common"))

	modCompileOnly("io.github.moehreag:legacy-lwjgl3:$legacy_lwjgl3+${project.minecraft_18}") {
		exclude group: 'org.lwjgl', module: 'lwjgl-glfw'
		exclude group: 'org.lwjgl', module: 'lwjgl-openal'
		exclude group: 'org.lwjgl', module: 'lwjgl-opengl'
		exclude group: 'org.lwjgl', module: 'lwjgl'
		exclude group: 'net.fabricmc'
		exclude group: 'org.javassist'
	}
	modLocalRuntime("io.github.moehreag:legacy-lwjgl3:$legacy_lwjgl3+${project.minecraft_18}:all-remapped") {
		exclude group: 'org.lwjgl', module: 'lwjgl-glfw'
		exclude group: 'org.lwjgl', module: 'lwjgl-openal'
		exclude group: 'org.lwjgl', module: 'lwjgl-opengl'
		exclude group: 'org.lwjgl', module: 'lwjgl'
		exclude group: 'net.fabricmc'
		exclude group: 'org.javassist'
	}

	def lwjglVersion = "3.3.2"
	api include("org.lwjgl:lwjgl-nanovg:$lwjglVersion")
	include runtimeOnly("org.lwjgl:lwjgl-nanovg:$lwjglVersion:natives-linux")
	include runtimeOnly("org.lwjgl:lwjgl-nanovg:$lwjglVersion:natives-linux-arm64")
	include runtimeOnly("org.lwjgl:lwjgl-nanovg:$lwjglVersion:natives-windows")
	include runtimeOnly("org.lwjgl:lwjgl-nanovg:$lwjglVersion:natives-windows-arm64")
	include runtimeOnly("org.lwjgl:lwjgl-nanovg:$lwjglVersion:natives-macos")
	include runtimeOnly("org.lwjgl:lwjgl-nanovg:$lwjglVersion:natives-macos-arm64")
}

processResources {
	inputs.property 'version', version

	filesMatching('fabric.mod.json') {
		expand "version": version
	}
}

runClient {
	classpath(sourceSets.test.runtimeClasspath)
}

// Configure the maven publication
publishing {
	publications {
		mavenJava(MavenPublication) {
			artifactId = archivesBaseName
			from components.java
		}
	}

	repositories {
		maven {
			name = "owlMaven"
			def repository = project.version.toString().contains("beta") || project.version.toString().contains("alpha") ? "snapshots" : "releases"
			url = "https://moehreag.duckdns.org/maven/" + repository
			credentials(PasswordCredentials)
			authentication {
				basic(BasicAuthentication)
			}
		}
	}
}
